# modern_magic_formula

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.etl  Dockerfile.ui  README.md  SECURITY_REMEDIATION.md  STATUS.md  TEST_TRIGGER.md  WORKFLOWS.md  check_streamlit_app.py  demo_diy_experience.py  diy_magic_formula_strategy.md  docker-compose.yml  external_feedback_recommendations.md  generate_sample_data.py  main.py  manual_update_report.md  pyproject.toml  quality_dashboard.md  quarterly_report.md  requirements-dev.txt  requirements.txt  streamlit_analysis.txt  streamlit_app.py  streamlit_html.html  streamlit_page_content.txt  test_edgar.py  test_streamlit_diy.py  test_xbrl_simple.py
app/: streamlit_app.py
backtesting/: __init__.py  backtest_results.csv  engine.py  metrics.py  risk_constraints.py  run_backtest.py  run_extended_backtest.py
data/: api_usage.json  curated_fundamentals.csv  latest_screening.csv  latest_screening.json  latest_screening_hybrid.csv  latest_screening_hybrid.json  metadata.json  metadata_hybrid.json  russell_1000_cache.json  russell_1000_proxy_20250724.csv
data_quality/: __init__.py  etl_integration.py  great_expectations_setup.py  monitoring.py  quality_history.json  validation_results_20250724_231922.json
docs/: ADVANCED_PORTFOLIO_CONSTRUCTION.md  AUTOMATION.md  DATA_QUALITY_FRAMEWORK.md  DATA_SOURCES_ANALYSIS.md  FRD.md  METHODOLOGY.md  REAL_LIFE_TESTING_GUIDE.md  TAX_AWARE_ANALYSIS.md  TDD.md
etl/: compute.py  edgar_fundamentals.py  fetch.py  hybrid_fundamentals.py  local_pipeline.py  main.py  (+8 more)
(+36 files in other folders)
