[project]
name = "modern-magic-formula"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "edgartools>=4.4.4",
    "great-expectations>=1.1.0",
    "numpy>=2.1.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.0",
    "streamlit>=1.47.0",
    "yfinance>=0.2.65",
]
