[project]
name = "modern-magic-formula"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<2.2.0",
    "edgartools>=4.4.4",
    "great-expectations>=1.3.0,<1.6.0",
    "playwright>=1.54.0",
    "plotly>=5.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "streamlit>=1.47.0",
    "yfinance>=0.2.65",
]
